Added flywheel sensor board PCB design

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .vscode/arduino.json
 .vscode/c_cpp_properties.json
+FlywheelCagePCB/FlywheelCagePCB-backups/FlywheelCagePCB-2025-05-11_224843.zip
+FlywheelCagePCB/FlywheelCagePCB-backups/FlywheelCagePCB-2025-05-14_182323.zip
+FlywheelCagePCB/FlywheelCagePCB-backups/FlywheelCagePCB-2025-05-14_183407.zip
+FlywheelCagePCB/FlywheelCagePCB-backups/FlywheelCagePCB-2025-05-16_031338.zip
+FlywheelCagePCB/fp-info-cache
