Tape out on V0.1

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 FlywheelCagePCB/FlywheelCagePCB-backups/
 FlywheelCagePCB/fp-info-cache
 FlywheelCagePCB/Passives.bak
+FlywheelCagePCB/~FlywheelCagePCB.kicad_pcb.lck
+FlywheelCagePCB/~FlywheelCagePCB.kicad_sch.lck
