--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-.vscode/arduino.json
-.vscode/c_cpp_properties.json
+.vscode/
 FlywheelCagePCB/FlywheelCagePCB-backups/
 FlywheelCagePCB/fp-info-cache
 FlywheelCagePCB/Passives.bak
