--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vscode/
-FlywheelCagePCB/FlywheelCagePCB-backups/
-FlywheelCagePCB/fp-info-cache
-FlywheelCagePCB/Passives.bak
-FlywheelCagePCB/~FlywheelCagePCB.kicad_pcb.lck
-FlywheelCagePCB/~FlywheelCagePCB.kicad_sch.lck
+pcb/FlywheelCagePCB/FlywheelCagePCB-backups/
+pcb/FlywheelCagePCB/fp-info-cache
+pcb/FlywheelCagePCB/Passives.bak
+pcb/FlywheelCagePCB/~FlywheelCagePCB.kicad_pcb.lck
+pcb/FlywheelCagePCB/~FlywheelCagePCB.kicad_sch.lck
